Removed unused dependencies; updated to JUnit 5; added GPL licence.